clusters/default/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: rss
  labels:
    app: freshrss
spec:
  type: ClusterIP
  selector:
    app: freshrss
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
