clusters/default/freshrss/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  namespace: rss
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`freshrss.${BASE_DOMAIN}`)
      kind: Rule
      services:
        - name: freshrss
          port: 80
